spec/e2e/operator/multiply_num_nonnum.lit
1 * "1"; # error: [line 1] Runtime error: Undefined operator * for Number and String.
